--- a/BenWilson295nTermProject/Views/RideTracker/RideInput.cshtml
+++ b/BenWilson295nTermProject/Views/RideTracker/RideInput.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "RideInput";
 }
-<div class="text-center jumbotron jumbotron-fluid bg-info">
+<div class="text-center jumbotron jumbotron-fluid bg-secondary">
     <h1 class="display-4">Add a ride to the leaderboard</h1>
 </div>
 <form method="post" class="container">
