--- a/BenWilson295nTermProject/Views/Forum/Forum.cshtml
+++ b/BenWilson295nTermProject/Views/Forum/Forum.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Forum";
 }
-<div class="text-center jumbotron jumbotron-fluid bg-info">
+<div class="text-center jumbotron jumbotron-fluid bg-secondary">
     <h1 class="display-4">Leave a Comment</h1>
 </div>
 <form method="post" class="container">
