--- a/BenWilson295nTermProject/Views/RideTracker/Rides.cshtml
+++ b/BenWilson295nTermProject/Views/RideTracker/Rides.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <table class="table table-bordered">
-        <thead class="table table-dark">
+        <thead class="table table">
             <th class="col-md-2">Distance in Miles</th>
             <th class="col-md-2">Duration(Minutes)</th>
             <th class="col-md-2">Start Point</th>
