--- a/BenWilson295nTermProject/Views/Home/Index.cshtml
+++ b/BenWilson295nTermProject/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p>A spiritual successor to Warmshowers.org</p>
     </div>
     <div class="text-center">
-    <h2>Links</h2>
+    <h2>Navigation</h2>
         <a asp-controller="Forum" asp-action="Index">Forum</a><br />
         <a asp-controller="RideTracker" asp-action="Index">Ride Tracker</a><br />
 </div>
