--- a/BenWilson295nTermProject/Views/RideTracker/Index.cshtml
+++ b/BenWilson295nTermProject/Views/RideTracker/Index.cshtml
@@ -3,12 +3,12 @@
     ViewData["Title"] = "RideInput";
 }
 
-<div class="text-center jumbotron jumbotron-fluid bg-danger">
+<div class="text-center jumbotron jumbotron-fluid bg-secondary">
     <h1 class="display-4">Bike ride leaderboard</h1>
 </div>
 <div class="container">
     <table class="table table-bordered">
-        <thead class="thead">
+        <thead class="thead-dark">
             <tr>
                 <th class="col-md-2">Distance in Miles</th>
                 <th class="col-md-2">Duration(Minutes)</th>
