--- a/BenWilson295nTermProject/Views/Forum/Forum.cshtml
+++ b/BenWilson295nTermProject/Views/Forum/Forum.cshtml
@@ -18,6 +18,7 @@
         <label asp-for="Name" class="control-label col-md-2">Name</label>
         <input asp-for="Name" class="form-control col-md-4" /><br />
     </div>
+    <input asp-for="BoardProperty" hidden />
     <div class="row p-4">
         <button type="submit" class="form-control btn btn-success col-3 rounded-0">Submit</button>
     </div>
