--- a/BenWilson295nTermProject/Views/Home/Index.cshtml
+++ b/BenWilson295nTermProject/Views/Home/Index.cshtml
@@ -1,13 +1,14 @@
-﻿@{
+﻿<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center jumbotron jumbotron-fluid bg-secondary">
-    <h1 class="display-4">Welcome to Ben's Bicycle Touring Forum!</h1>
-    <p>A spiritual successor to Warmshowers.org</p>
-    </div>
-    <div class="text-center">
-    <h2>Links</h2>
-        <a asp-controller="Forum" asp-action="Index">Forum</a><br />
-        <a asp-controller="RideTracker" asp-action="Index">Ride Tracker</a><br />
+<div class="container-fluid">
+    <div class="text-center jumbotron jumbotron-fluid bg-secondary aqws">
+        <h1 class="display-4">Welcome to Toasty Bedrolls Touring Forum!</h1>
+        <p>A spiritual successor to Warmshowers.org</p>
+        </div>
 </div>
+
+
