--- a/BenWilson295nTermProject/Views/RideTracker/Rides.cshtml
+++ b/BenWilson295nTermProject/Views/RideTracker/Rides.cshtml
@@ -1,4 +1,5 @@
-﻿@model Ride
+﻿<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@model Ride
 @{
     ViewData["Title"] = "Ride";
 }
