--- a/BenWilson295nTermProject/Views/Forum/Index.cshtml
+++ b/BenWilson295nTermProject/Views/Forum/Index.cshtml
@@ -1,26 +1,94 @@
-﻿@{
+﻿<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@{
     ViewData["Title"] = "Forum";
 }
 
-<div class="text-center jumbotron jumbotron-fluid bg-secondary">
-    <h1 class="display-4">Bicycle Touring Discussion Forum</h1>
-</div>
-<div class="container">
-    <table class="table table-bordered">
-        <thead class="thead-dark">
-            <tr>
-                <th class="col-md-2">Boards</th>
-            </tr>
-        </thead>
-        <a asp-controller="Forum"
-           asp-action="Boards"
-           asp-route-BoardProperty="@BoardOptions.Touring">Touring</a>
-        <a asp-controller="Forum"
-           asp-action="Boards"
-           asp-route-BoardProperty="@BoardOptions.Bmx">Bmx</a>
-        <a asp-controller="Forum"
-           asp-action="Boards"
-           asp-route-BoardProperty="@BoardOptions.Bikepacking">Bike Packing</a>
-    </table>
+<div class="container my-3">
+    <div class="row">
+        <div class="col-12 col-xl-9">
+            <h2 class="h4 category mb-0 p-4 rounded-top text-light">Boards</h2>
+                <table class="table table-striped table-bordered table-responsive">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col" class="forum-col">Forum</th>
+                            <th scope="col">Topics</th>
+                            <th scope="col">Posts</th>
+                            <th scope="col" class="last-post-col">Last Post</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <h3 class="h5 mb-0">
+                                    <a asp-controller="Forum"
+                                        asp-action="Boards"
+                                        asp-route-BoardProperty="@BoardOptions.Touring">Touring</a>
+                                </h3>
+                                <p class="mb-0">Traveling the big wide world on two wheels.</p>
+                            </td>
+                            <td>
+                                <div>
+                                    62
+                                    <!--Placeholder so that it doesn't look goofy with 0 posts, will use a count-->
+                                </div>
+                            </td>
+                            <td>
+                                223
+                            <!--Placeholder so that it doesn't look goofy with 0 posts, will use a count-->
+                            </td>
+                            <td>
+                                <h4 class="h6 mb-0"><a href="#">What kind of helmet should I take touring?</a></h4>
+                                <div> by <a href="#">Joffrey Baratheon</a></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h3 class="h5 mb-0">
+                                    <a asp-controller="Forum"
+                                        asp-action="Boards"
+                                        asp-route-BoardProperty="@BoardOptions.Bmx">Bmx</a>
+                                </h3>
+                                <p class="mb-0">Tiny bikes, big helmets, and football pads.</p>
+                            </td>
+                        <td>
+                            <div>
+                                16
+                            </div>
+                        </td>
+                        <td>
+                            420
+                        </td>
+                        <td>
+                            <h4 class="h6 mb-0"><a href="#">I've been using performance enhancing drugs my entire career, that's totally cool right?</a></h4>
+                            <div> by <a href="#">Lance Armstrong</a></div>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h3 class="h5 mb-0">
+                                    <a asp-controller="Forum"
+                                        asp-action="Boards"
+                                        asp-route-BoardProperty="@BoardOptions.Bikepacking">Bike Packing</a>
+                                </h3>
+                                <p class="mb-0">Like touring but for techie dorks.</p>
+                            </td>
+                        <td>
+                            <div>
+                                24
+                            </div>
+                        </td>
+                        <td>
+                            132
+                        </td>
+                        <td>
+                            <h4 class="h6 mb-0"><a href="#">I'm new to BMX and I'm looking for bike recommendations.</a></h4>
+                            <div> by <a href="#">Burnt Chrysler</a></div>
+                        </td>
+                        </tr>
+                    </tbody>
+                </table>
+        </div>
     </div>
-    <a href="/Home" class="btn btn-primary">Home</a>
+</div>
+
+
