--- a/BenWilson295nTermProject/Views/Forum/Post.cshtml
+++ b/BenWilson295nTermProject/Views/Forum/Post.cshtml
@@ -1,15 +1,18 @@
-﻿@model Post
+﻿<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@model Post
 @{
     ViewData["Title"] = "Post";
 }
 
 <div class="container">
     <table class="table table-bordered">
-        <thead class="table table-dark">
-        <th class="col-md-2">Topic</th>
-        <th class="col-md-4">Body</th>
-        <th class="col-md-1">Author</th>
-        <th class="col-md-1">Date</th>
+        <thead class="table table-striped table-bordered aqws">
+            <tr>
+                <th class="col-md-2">Topic</th>
+                <th class="col-md-4">Body</th>
+                <th class="col-md-1">Author</th>
+                <th class="col-md-1">Date</th>
+            </tr>
         </thead>
         <tr>
             <td class="col-md-2">@Model.Subject</td>
@@ -18,4 +21,5 @@
             <td class="col-md-1">@Model.DatePosted</td>
         </tr>
     </table>
+    <a asp-controller="Forum" asp-action="Forum" asp-route-boardProperty="#" class="btn btn-primary aqws col-md-4 mb-1">Click here to reply[Placeholder, incomplete button]</a><br />
 </div>
