--- a/BenWilson295nTermProject/Views/RideTracker/Index.cshtml
+++ b/BenWilson295nTermProject/Views/RideTracker/Index.cshtml
@@ -1,23 +1,24 @@
-﻿@model List<Ride>
+﻿<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+@model List<Ride>
 @{
     ViewData["Title"] = "RideInput";
 }
 
-<div class="text-center jumbotron jumbotron-fluid bg-secondary">
-    <h1 class="display-4">Bike ride leaderboard</h1>
-</div>
-<div class="container">
-    <table class="table table-bordered">
-        <thead class="thead-dark">
-            <tr>
-                <th class="col-md-2">Distance in Miles</th>
-                <th class="col-md-2">Duration(Minutes)</th>
-                <th class="col-md-2">Start Point</th>
-                <th class="col-md-2">End Point</th>
-                <th class="col-md-2">Date of Ride</th>
-                <th class="col-md-2">Date Submitted to Leaderboard</th>
-            </tr>
-        </thead>
+<div class="container my-3">
+    <div class="row">
+        <div class="col-12 col-xl-9">
+            <h2 class="h4 category mb-0 p-4 rounded-top text-light">Ride Leaderboard</h2>
+            <table class="table table-striped table-bordered table-responsive">
+                <thead class="thead-light">
+                    <tr>
+                        <th class="col-md-2">Distance in Miles</th>
+                        <th class="col-md-2">Duration(Minutes)</th>
+                        <th class="col-md-2">Start Point</th>
+                        <th class="col-md-2">End Point</th>
+                        <th class="col-md-2">Date of Ride</th>
+                        <th class="col-md-2">Date Submitted to Leaderboard</th>
+                    </tr>
+            </thead>
         @if (@Model != null)
         {
             foreach (Ride ride in Model)
@@ -49,7 +50,9 @@
             }
         }
     </table>
-</div>
-<a href="RideTracker/RideInput" class="btn btn-primary">Add new ride</a>
+<a href="RideTracker/RideInput" class="btn btn-primary aqws">Add new ride</a>
 <br />
-<a href="/Home" class="btn btn-primary">Home</a>
+<a href="/Home" class="btn btn-primary aqws">Home</a>
+</div>
+</div>
+</div>
