--- a/BenWilson295nTermProject/wwwroot/css/site.css
+++ b/BenWilson295nTermProject/wwwroot/css/site.css
@@ -69,3 +69,24 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.navbar {
+    background-color: #45B8FF !important;
+}
+
+.category {
+    background-color: #45B8FF !important;
+}
+
+.aqws {
+    background-color: #45B8FF !important;
+    color: white !important;
+}
+
+.forum-col {
+    min-width: 256px !important;
+}
+
+.last-post-col {
+    min-width: 192px !important;
+}
