--- a/BenWilson295nTermProject/wwwroot/css/site.css
+++ b/BenWilson295nTermProject/wwwroot/css/site.css
@@ -135,7 +135,7 @@ body {
 }
 
     .login-form__input:focus {
-        border-color: #45B8FF;
+        border-color: #308fc9;
     }
 
     .login-form__input::placeholder {
